# plover_midi4text

./: .gitignore  MANIFEST.in  Pipfile  README.md  README.rst  setup.cfg  update_dictionaries.py
plover_midi4text/: system.py  system_extended.py
plover_midi4text/dictionaries/: midi4text_briefs.json  midi4text_main.json
