[metadata]
name = plover_midi4text
version = 0.0.2
description = Midi4Text English orthographic system implementation for Plover
long_description = file: README.rst
author = Nick Markopoulos
author_email = nsmarkop@gmail.com
license = GNU General Public License v3 or later (GPLv3+)
url = https://github.com/nsmarkop/plover_midi4text
classifiers =
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
keywords = plover plover_plugin

[options]
zip_safe = True
include_package_data = True
install_requires =
    plover>=4.0.0.dev7
    plover-michela>=0.1.6
    plover-midi>=0.2.6
packages =
    plover_midi4text

[options.entry_points]
plover.system =
    Midi4Text = plover_midi4text.system
